--- a/src/views/pages/login/index.css
+++ b/src/views/pages/login/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 90vh;
+  height: auto;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   color: #303433;
