--- a/src/views/pages/login/index.css
+++ b/src/views/pages/login/index.css
@@ -21,9 +21,9 @@
   background-size: 100% 102%;
 }
 .side img {
-  width: 70%;
-  max-width: 70%;
-  height: 500px;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
   border-radius: 20px;
 }
 .login-container {
