--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@
   align-content: center;
   align-items: center;
   text-align: center;
-  height: 60px !important;
+  height: 100%;
   border-left: 5px solid rgb(252, 162, 177);
   padding-left: 10px;
   margin-left: 20px;
