--- a/src/views/tax/RemittedTax/style.scss
+++ b/src/views/tax/RemittedTax/style.scss
@@ -25,4 +25,12 @@
     left: 5px;
     bottom: 10px;
   }
+  .signatureOverPrintedNamex {
+    padding: 20px;
+    width: 400px;
+
+    position: absolute;
+    right: 5px;
+    bottom: 10px;
+  }
 }
