update sa sales cashier

--- a/src/views/cashier/cashierSales/style.scss
+++ b/src/views/cashier/cashierSales/style.scss
@@ -1,3 +1,11 @@
+.hover-red:hover {
+  border: 2px solid rgb(241, 81, 81);
+  cursor: pointer;
+}
+.a-s-f {
+  border: 3px solid rgb(241, 81, 81);
+}
+
 .sales_container {
   display: flex;
   justify-content: center;
