--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -121,14 +121,14 @@
 
 .image-gallery-container {
   position: relative;
-  width: 600px;
-  border: 0.5px solid grey;
+  width: 100%;
+
   height: 400px;
   display: flex;
   justify-content: space-between;
 }
 .image-gallery-view {
-  width: 450px;
+  width: 80%;
   height: 300px;
   padding: 10px;
 }
@@ -152,7 +152,7 @@
 }
 
 .image-gallery-lists {
-  width: 150px;
+  width: 20%;
   height: 100%;
   position: relative;
   overflow-y: scroll;
