--- a/src/views/Blog/style.scss
+++ b/src/views/Blog/style.scss
@@ -23,6 +23,14 @@
     }
   }
 }
+.data-info {
+  display: block;
+  width: 85%;
+  justify-self: center;
+  align-self: center;
+  margin: 0 auto;
+  padding-top: 10px;
+}
 .create-blog-input {
   width: 92%;
   display: flex;
