--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -479,7 +479,7 @@
   font-weight: bold;
   letter-spacing: 2px;
   text-transform: capitalize;
-  text-align: center;
+  text-align: left;
   font-family: "Playfair Display", serif;
   cursor: pointer;
   &:hover {
@@ -979,5 +979,14 @@
     overflow: initial !important;
     -webkit-print-color-adjust: exact;
     padding: 10px;
+  }
+  .content-center {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &.content-center > * {
+      width: 90%;
+    }
   }
 }
