--- a/src/views/BranchChat/style.scss
+++ b/src/views/BranchChat/style.scss
@@ -127,6 +127,7 @@
   margin-top: 10px;
   width: 100%;
   padding: 10px;
+  position: relative;
 }
 .chat-body-container {
   width: 73%;
@@ -348,7 +349,7 @@
     }
     .left-sender-content {
       margin-left: 15px;
-      width: 280px;
+      width: 300px;
       background-color: grey;
       padding: 5px;
       border-radius: 10px;
@@ -379,7 +380,7 @@
     }
     .right-sender-content {
       margin-right: 15px;
-      width: 280px;
+      width: 300px;
       background-color: rgb(226, 161, 161);
       padding: 5px;
       border-radius: 10px;
