--- a/src/views/counter/counter.scss
+++ b/src/views/counter/counter.scss
@@ -211,48 +211,33 @@
     height: initial !important;
     overflow: initial !important;
     -webkit-print-color-adjust: exact;
-    padding: 10px;
+    padding: 3px;
   }
   table {
-    width: 100% !important;
-    padding: 20px !important;
+    width: 245px !important;
+    padding: 5px !important;
   }
   #logoInfoPrint {
     display: block;
     margin: 0 auto;
-    width: 200px !important;
-    height: 200px !important ;
+    width: 60px !important;
+    height: 60px !important ;
     margin-top: 20px;
     margin-bottom: 20px;
   }
-  th,
-  #branch-name {
-    text-align: center;
-    font-size: 20px;
-    letter-spacing: 3px;
-    text-transform: capitalize;
-  }
   td {
     text-align: center;
-    letter-spacing: 3px;
     text-transform: capitalize;
-
     margin-top: 5px;
-    font-weight: 600;
-  }
-  tr {
-    padding-left: 10px;
   }
   .print-information {
-    width: 80%;
+    width: 245px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     .branch-cashier {
       margin-top: 5px;
       text-align: left;
-      font-size: 20px;
-      letter-spacing: 3px;
       text-transform: capitalize;
       span {
         border-bottom: 1px solid rgb(0, 0, 0);
