--- a/src/views/OnlineStore/Order/style.scss
+++ b/src/views/OnlineStore/Order/style.scss
@@ -52,3 +52,51 @@
     font-size: 30px;
   }
 }
+
+.customer-table-con {
+  display: flex;
+  width: 250px;
+  & > * {
+    margin: 10;
+  }
+  height: auto;
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+  }
+  .phone-num-order {
+    padding-top: 0;
+    margin-top: 0;
+    font-size: 12px;
+    margin-left: 10px;
+  }
+}
+.container-order-custo {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5px;
+}
+.msg-icon {
+  cursor: pointer;
+  &:hover {
+    color: rgb(253, 195, 5);
+  }
+}
+.select-order-details {
+  outline: none;
+  border: 1px solid grey;
+  border-radius: 10px;
+  padding: 15px;
+  font-size: 20px;
+}
+.modal-img-custo {
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+}
+.modal-customer-name {
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 1.5;
+}
