--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,6 +60,11 @@
 .blog-title {
   font-size: 18px;
   color: rgb(107, 107, 107);
+  letter-spacing: 1.5px;
+  span {
+    letter-spacing: 2.5px;
+    font-weight: 800;
+  }
   text-transform: capitalize;
 }
 .create-post {
