--- a/src/views/Blog/style.scss
+++ b/src/views/Blog/style.scss
@@ -95,3 +95,20 @@
   color: #6d6d6d;
   margin-left: 10px;
 }
+.blog-content-heading {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  label {
+    font-size: 25px;
+    letter-spacing: 2px;
+    font-weight: 500;
+  }
+  img {
+    width: 130px;
+    height: 130px;
+  }
+}
