--- a/src/views/OnlineStore/Order/style.scss
+++ b/src/views/OnlineStore/Order/style.scss
@@ -83,6 +83,15 @@
     color: rgb(253, 195, 5);
   }
 }
+.cart-item-img {
+  width: 100px;
+  height: 110px;
+}
+.product-name-order {
+  margin-left: 15px;
+  font-size: 17px;
+  margin-top: 10px;
+}
 .select-order-details {
   outline: none;
   border: 1px solid grey;
