--- a/src/views/Blog/PersonalBlogContent/style.scss
+++ b/src/views/Blog/PersonalBlogContent/style.scss
@@ -182,6 +182,30 @@
     border-radius: 6px;
     padding: 10px;
     display: flex;
+    width: 198px;
+    background-color: #f0f2f5;
+    justify-content: flex-start;
+    align-items: center;
+    right: 15px;
+    span {
+      display: block;
+      margin-left: 5px;
+      margin-top: 3px !important;
+      color: black;
+      font-weight: 700;
+    }
+
+    cursor: pointer;
+    &:hover {
+      background-color: #d8dadf;
+    }
+  }
+  .edit-store {
+    position: absolute;
+    bottom: 60px;
+    border-radius: 6px;
+    padding: 10px;
+    display: flex;
     background-color: #f0f2f5;
     justify-content: flex-start;
     align-items: center;
