--- a/src/views/counter/counter.scss
+++ b/src/views/counter/counter.scss
@@ -205,43 +205,43 @@
   }
 }
 
-@media print {
-  html,
-  body {
-    height: initial !important;
-    overflow: initial !important;
-    -webkit-print-color-adjust: exact;
-    padding: 3px;
-  }
-  table {
-    width: 245px !important;
-    padding: 5px !important;
-  }
-  #logoInfoPrint {
-    display: block;
-    margin: 0 auto;
-    width: 60px !important;
-    height: 60px !important ;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  td {
-    text-align: center;
-    text-transform: capitalize;
-    margin-top: 5px;
-  }
-  .print-information {
-    width: 245px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    .branch-cashier {
-      margin-top: 5px;
-      text-align: left;
-      text-transform: capitalize;
-      span {
-        border-bottom: 1px solid rgb(0, 0, 0);
-      }
-    }
-  }
-}
+// @media print {
+//   html,
+//   body {
+//     height: initial !important;
+//     overflow: initial !important;
+//     -webkit-print-color-adjust: exact;
+//     padding: 3px;
+//   }
+//   table {
+//     width: 245px !important;
+//     padding: 5px !important;
+//   }
+//   #logoInfoPrint {
+//     display: block;
+//     margin: 0 auto;
+//     width: 60px !important;
+//     height: 60px !important ;
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+//   }
+//   td {
+//     text-align: center;
+//     text-transform: capitalize;
+//     margin-top: 5px;
+//   }
+//   .print-information {
+//     width: 245px;
+//     margin: 0 auto;
+//     display: flex;
+//     justify-content: space-between;
+//     .branch-cashier {
+//       margin-top: 5px;
+//       text-align: left;
+//       text-transform: capitalize;
+//       span {
+//         border-bottom: 1px solid rgb(0, 0, 0);
+//       }
+//     }
+//   }
+// }
