--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -409,8 +409,8 @@
   width: 100%;
   outline: none;
   border: none;
-  border-radius: 30px;
-  background: #e6e6e6;
+  border-bottom: 0.5px solid rgb(131, 130, 130);
+  background: #ffffff;
   color: #333;
   letter-spacing: 0.5px;
   padding: 14px 20px;
@@ -1041,5 +1041,15 @@
     &.content-center > * {
       width: 90%;
     }
+  }
+  .barcode-container {
+    width: 264px;
+    display: flex;
+    justify-content: "center";
+    align-items: "center";
+    align-self: "center";
+    margin: 0 auto;
+    padding: 0;
+    border: 1px solid grey;
   }
 }
